# rs-lending

./: .cursorignore  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  clippy.toml  coverage.md  deploy-devnet.json  lcov.info  networks.json  rust-toolchain.toml  security_report.md
.cursor/rules/: mvx-security.mdc
.github/workflows/: actions.yml  releases.yml
.serena/: project.yml
aggregator_mock/: Cargo.toml
aggregator_mock/meta/: Cargo.toml
aggregator_mock/meta/src/: main.rs
aggregator_mock/wasm/: Cargo.toml
aggregator_mock/wasm/src/: lib.rs
common/checks/: Cargo.toml
common/constants/: Cargo.toml
common/constants/src/: constants.rs
common/errors/: Cargo.toml
common/errors/src/: errors.rs
common/events/: Cargo.toml
common/events/src/: events.rs
common/math/: Cargo.toml
common/math/src/: math.rs
common/price-aggregator-proxy/: Cargo.toml
common/proxies/: Cargo.toml
common/proxies/src/: mod.rs  (+3 more)
common/rates/: Cargo.toml
common/structs/: Cargo.toml
common/structs/src/: model.rs
common/tokens/: Cargo.toml
configs/: devnet_market_configs.json  emodes.json  mainnet_market_configs.json  script.sh
controller/: Cargo.toml  ORACLE.md  sc-config.toml
controller/interaction/: market_configs.json  market_configs.sh  snippet.sh
controller/meta/: Cargo.toml
controller/src/: config.rs  factory.rs  lib.rs  multiply.rs  oracle.rs  router.rs  storage.rs  strategy.rs  utils.rs  validation.rs  views.rs
controller/src/cache/: mod.rs
controller/src/contexts/: base.rs
controller/src/helpers/: math.rs  mod.rs  strategies.rs  swaps.rs
controller/src/oracle/: mod.rs
controller/src/positions/: account.rs  borrow.rs  deposit.rs  emode.rs  liquidation.rs  mod.rs  repay.rs  supply.rs  update.rs  vault.rs  withdraw.rs
controller/src/proxies/: mod.rs  proxy_pool.rs  proxy_price_aggregator.rs
controller/src/storage/: mod.rs
controller/tests/: add_rewards.rs  borrow.rs  clean_bad_debt.rs  config.rs  emode.rs  flash_loan.rs  interest_rate_investigation.rs  isolated.rs  liquidation_bonus_boundaries.rs  liquidation_multicollateral_micro_split.rs  liquidation_tests.rs  liquidations.rs  liquidity_strategy.rs  price_aggregator_flow.rs  repay.rs  rounding_attack_test.rs  rounding_demonstration.rs  router.rs  siloed.rs  simple_rounding_test.rs  simulation.rs  strategy.rs  supply.rs  test_bug.rs  test_bug_escalation.rs  tests.rs  vault.rs  views.rs  withdraw.rs
controller/tests/constants/: mod.rs
controller/tests/proxys/: accumulator.mxsc.json  mod.rs  proxy_aggregator.rs  proxy_flash_mock.rs  proxy_lending_pool.rs  proxy_liquidity_pool.rs  proxy_swap_mock.rs
controller/tests/setup/: mod.rs
controller/wasm/: Cargo.toml
controller/wasm/src/: lib.rs
flash_mock/: Cargo.toml  sc-config.toml
flash_mock/meta/: Cargo.toml
flash_mock/src/: lib.rs  proxy_lending.rs
flash_mock/wasm/: Cargo.toml
lending_pool/: Cargo.toml  lcov.info  sc-config.toml
lending_pool/interact-rs/: Cargo.toml
lending_pool/interaction/: market_configs.json  market_configs.sh  snippet.sh
lending_pool/meta/: Cargo.toml
lending_pool/meta/src/: main.rs
lending_pool/src/: config.rs  errors.rs  events.rs  factory.rs  lib.rs  math.rs  multiply.rs  oracle.rs  position.rs  proxy_pool.rs  proxy_price_aggregator.rs  router.rs  storage.rs  utils.rs  validation.rs  views.rs
lending_pool/src/contexts/: base.rs
lending_pool/src/errors/: mod.rs
lending_pool/src/helpers/: math.rs  strategies.rs
lending_pool/src/positions/: account.rs  borrow.rs  deposit.rs  emode.rs  liquidation.rs  mod.rs  repay.rs  update.rs  withdraw.rs
lending_pool/src/proxies/: mod.rs  proxy_legld.rs  proxy_pool.rs  proxy_price_aggregator.rs
lending_pool/tests/: liquidation_tests.rs  proxy_aggregator.rs  proxy_lending_pool.rs  rust_tests.rs  tests.rs  views.rs
lending_pool/tests/constants/: mod.rs
lending_pool/tests/lending_pool_interaction/: mod.rs
lending_pool/tests/proxys/: egld-liquid-staking.mxsc.json  mod.rs  pair-full.mxsc.json  proxy_aggregator.rs  proxy_flash_mock.rs  proxy_lending_pool.rs  proxy_liquidity_pool.rs
lending_pool/tests/setup/: mod.rs
lending_pool/wasm/: Cargo.toml
lending_pool/wasm/src/: lib.rs
liquidity_layer/: Cargo.toml  README.md  sc-config.toml
liquidity_layer/meta/: Cargo.toml
liquidity_layer/src/: lib.rs  liquidity.rs  rates.rs  utils.rs  view.rs
liquidity_layer/src/cache/: mod.rs
liquidity_layer/src/contexts/: base.rs
liquidity_layer/src/storage/: mod.rs
liquidity_layer/wasm/: Cargo.toml
liquidity_layer/wasm/src/: lib.rs
liquidity_pool/: Cargo.toml  README.md  lcov.info  sc-config.toml
liquidity_pool/interaction/: snippet.sh
liquidity_pool/interaction/interactor/src/: interactor_main.rs
liquidity_pool/interactor/: Cargo.toml
liquidity_pool/interactor/src/: interactor_main.rs  proxy.rs
liquidity_pool/meta/: Cargo.toml
liquidity_pool/src/: errors.rs  events.rs  lib.rs  liq_math.rs  liq_storage.rs  liq_utils.rs  liquidity.rs  rates.rs  storage.rs  utils.rs  view.rs
liquidity_pool/src/contexts/: base.rs
liquidity_pool/wasm/: Cargo.toml
liquidity_pool/wasm/src/: lib.rs
price-aggregator/: Cargo.toml  sc-config.toml
price-aggregator/interaction/: snippet.sh
price-aggregator/interactor/: Cargo.toml
price-aggregator/meta/: Cargo.toml
price-aggregator/src/: admin.rs  events.rs  lib.rs  storage.rs  structs.rs  utils.rs  views.rs
price-aggregator/wasm/: Cargo.toml
price_aggregator/: Cargo.toml  README.md  sc-config.toml
price_aggregator/interaction/: snippet.sh
price_aggregator/interactor/: Cargo.toml
price_aggregator/interactor/src/: interactor_main.rs  proxy.rs
price_aggregator/meta/: Cargo.toml
price_aggregator/scenarios/: stress_submit_test.scen.json  stress_submit_with_gas_schedule_test.scen.json
price_aggregator/src/: admin.rs  events.rs  lib.rs  median.rs  storage.rs  structs.rs  utils.rs  views.rs
price_aggregator/wasm/: Cargo.toml
proxy/: controller.rs  liquidity_layer.rs
swap_mock/: Cargo.toml
swap_mock/meta/: Cargo.toml
swap_mock/src/: lib.rs
swap_mock/wasm/: Cargo.toml
(+15 files in other folders)
