[workspace]
members = [
    "liquidity_pool",
    "liquidity_pool/meta",
    "lending_pool",
    "lending_pool/meta",
    "common/structs",
    "common/constants",
    "common/errors",
    "common/events",
    "common/math",
    "price_aggregator",
    "price_aggregator/meta",
    "flash_mock",
    "flash_mock/meta",
]
