[workspace]
members = [
    "liquidity_layer",
    "liquidity_layer/meta",
    "controller",
    "controller/meta",
    "common/structs",
    "common/constants",
    "common/errors",
    "common/events",
    "common/math",
    "price_aggregator",
    "price_aggregator/meta",
    "flash_mock",
    "flash_mock/meta",
]
