[package]
name = "lending-pool"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc-modules]
version = "0.54.6"

[dependencies.multiversx-sc]
version = "0.54.6"

[dependencies.liquidity-pool]
path = "../liquidity_pool"

[dependencies.common-structs]
path = "../common/structs"

[dependencies.common-events]
path = "../common/events"

[dependencies.common-constants]
path = "../common/constants"

[dependencies.price_aggregator]
path = "../price_aggregator"

[dependencies.flash-mock]
path = "../flash_mock"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
multiversx-sc-scenario = "0.54.6"
rs-liquid-xoxno = { git = "https://github.com/XOXNO/rs-liquid-xoxno" }
rs-liquid-staking-sc = { git = "https://github.com/XOXNO/rs-liquid-staking-sc", package = "liquid-staking" }
pair = { git = "https://github.com/mihaieremia/mx-exchange-sc", package = "pair" }