[package]
name = "liquidity-layer"
version = "0.0.1"
authors = ["Mihai Eremia <mihai@xoxno.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.56.0"

[dependencies.common-structs]
path = "../common/structs"

[dependencies.common-math]
path = "../common/math"

[dependencies.common-constants]
path = "../common/constants"

[dependencies.common-events]
path = "../common/events"

[dependencies.common-errors]
path = "../common/errors"

[dev-dependencies.multiversx-sc-scenario]
version = "0.56.0"
