[package]
name = "liquidity-pool"
version = "0.0.1"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.56.0"

[dependencies.common-structs]
path = "../common/structs"

[dependencies.common-math]
path = "../common/math"

[dependencies.common-constants]
path = "../common/constants"

[dependencies.common-events]
path = "../common/events"

[dev-dependencies.multiversx-sc-scenario]
version = "0.56.0"
