[package]
name = "common-structs"
version = "0.0.0"
authors = ["catalin-neagu <catalin.neagu@elrond.com>"]
edition = "2018"

[lib]
path = "src/model.rs"

[dependencies.common-constants]
path = "../constants"

[dependencies.common-errors]
path = "../errors"

[dependencies.multiversx-sc]
version = "0.56.0"
