[package]
name = "rust-interact"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[[bin]]
name = "rust-interact"
path = "src/interactor_main.rs"

[dependencies.price_aggregator]
path = ".."

[dependencies.multiversx-sc-snippets]
version = "0.54.5"

[dependencies.multiversx-sc]
version = "0.54.6"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.6"

# uncomment when using chain simulator
# [features]
# chain-simulator-tests = []

